force-app/main/default/objects/nFORCE__Section__mdt/fields/nFORCE__Content__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Content__c</fullName>
    <description>Lookup to the content related to this section</description>
    <label>Content</label>
    <referenceTo>nFORCE__Content__mdt</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>