force-app/main/default/objects/nFORCE__Section__mdt/fields/nFORCE__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if this section is currently active</description>
    <label>Is_Active</label>
    <type>Checkbox</type>
</CustomField>